Removing filtering list using Java code